--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run start-next\" \"npm run start-server\"",
-    "start-next": "next dev -p 3000",
-    "start-server": "node server.js -p 5000"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
     "@aws-sdk/client-polly": "^3.504.0",
     "@aws-sdk/credential-provider-ini": "^3.504.0",
     "aws-sdk": "^2.1549.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "dompurify": "^3.0.8",
+    "draft-js": "^0.11.7",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "play-sound": "^1.1.6"
+    "mammoth": "^1.6.0",
+    "next": "14.1.0",
+    "play-sound": "^1.1.6",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
