--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dompurify": "^3.0.8",
+    "dotenv": "^16.4.1",
     "draft-js": "^0.11.7",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
