--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-polly": "^3.504.0",
     "@aws-sdk/credential-provider-ini": "^3.504.0",
     "aws-sdk": "^2.1549.0",
+    "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dompurify": "^3.0.8",
